--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=datingapp.db"
+  },
+  "TokenKey": "SampleKeyHere This should be atleast 16 characters long"
 }
