End of section 11 Added Photo Upload/view/delete related features

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=datingapp.db"
   },
+  "CloudinarySettings": {
+    "CloudName": "dnepbdtee",
+    "ApiKey": "483263915491325",
+    "ApiSecret": "cFpKUwRm0z11LIX6ntylF9AE-pc"
+  },
   "AllowedHosts": "*"
 }
